Attendence and leave module
added report

Expense integration changes.

expense module integration

added logo file

added maintainece

update matarialize

--- a/package.json
+++ b/package.json
@@ -31,17 +31,21 @@
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.20-4",
-    "angular2-materialize": "^6.2.1",
+    "angular2-materialize": "^6.3.0",
+    "chart.js": "^2.4.0",
     "codelyzer": "~1.0.0-beta.3",
+    "hammerjs": "^2.0.8",
     "immutable": "^3.8.1",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
+    "jquery": "^3.1.1",
     "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "ng2-charts": "^1.4.1",
+    "materialize-css": "^0.97.8",
+    "ng2-charts": "^1.4.4",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
